crud-operations/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: fastapi-mysql
  name: fastapi-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-mysql
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: fastapi-mysql
    spec:
      containers:
      - image: regserinaplus.azurecr.io/serinadb:v1
        name: fastapi-mysql
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      imagePullSecrets:
      - name: deploymentsecret
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      
      
status: {}

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-mysql
  labels:
    run: fastapi-mysql
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: fastapi-mysql
  type: LoadBalancer
