crud-operations/prod-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: server
  namespace: production
spec: 
  selector: 
    matchLabels: 
      app: server
  replicas: 5 # tells deployment to run 2 pods matching the template 
  template:
    metadata: 
      labels: 
        app: server
    spec: 
      containers: 
      - name: server 
        image: regserinaplus.azurecr.io/serina-server:release
        imagePullPolicy: Always
        ports: 
        - containerPort: 8000 
        resources:
          requests:
            cpu: 200m
          limits:
            cpu: 400m
      imagePullSecrets:
      - name: deploymentsecret
---
# https://kubernetes.io/docs/concepts/services-networking/service/#defining-a-service  
apiVersion: v1
kind: Service
metadata:
  name: server-cluster
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: server
