crud-operations/qa-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2 
kind: Deployment 
metadata: 
  name: server
  namespace: rovedev
spec: 
  selector: 
    matchLabels: 
      app: server
  replicas: 10 # tells deployment to run 2 pods matching the template 
  revisionHistoryLimit: 0
  template:
    metadata: 
      labels: 
        app: server
    spec: 
      containers: 
      - name: server 
        image: roveregistry.azurecr.io/serina-server:rovedev
        imagePullPolicy: Always
        ports: 
        - containerPort: 8000 
        resources:
          requests:
            cpu: 150m
          limits:
            cpu: 250m
      imagePullSecrets:
      - name: deploymentsecret

---

apiVersion: v1
kind: Service
metadata:
  name: server-cluster
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: server
