crud-operations/ingress-qa-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qa-ingress
  namespace: qa-demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: sameorigin";
      more_set_headers "X-XSS-Protection: 1; mode=block";
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  ingressClassName: nginx2
  rules:
  - host: serina-qa.centralindia.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-cluster
            port:
              number: 80
  tls:
  - hosts:
    - serina-qa.centralindia.cloudapp.azure.com
    secretName: qa-tls-secret
