crud-operations/ingress-rove-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rove-ingressdev
  namespace: rovedev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "server: hide";
      more_set_headers "X-Content-Type-Options: nosniff";
      more_set_headers "X-Frame-Options: sameorigin";
      more_set_headers "X-XSS-Protection: 1; mode=block";
    cert-manager.io/cluster-issuer: letsencrypt-prod
    
spec:
  ingressClassName: nginx5
  defaultBackend:
    service:
      name: server-cluster
      port:
        number: 80
  rules:
  - host: rovedev.centralindia.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-cluster
            port:
              number: 80
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: broker
            port:
              number: 80
  tls:
  - hosts:
    - rovedev.centralindia.cloudapp.azure.com
    secretName: rove-tls-secret
